# vibe-writing

./: .gitignore  README-zh.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
articles/: a-survey-of-binary-porting-tools-zh.md  a-survey-of-binary-porting-tools-zh.md-toc.md  a-survey-of-binary-porting-tools.md  cross-platform-gui-development-tools-2026.md  cross-platform-gui-development-tools-zh.md  kernel-in-userspace-rebellion.md
data/: gemini_chat_1.txt  gemini_chat_2.txt
src/vibe_writing/: __init__.py  _browser.py  _format.py  fetch.py  fetch_chatgpt.py  fetch_doubao.py  fetch_gemini.py  mcp_server.py
tests/: test_core.py
