[project]
name = "vibe-writing"
version = "0.1.0"
description = "AI-friendly tools for vibe writing — fetch, parse, and transform web content into article material."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "chen3feng" },
]
keywords = ["writing", "ai", "gemini", "web-scraping", "article"]

dependencies = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]

[project.scripts]
fetch-gemini = "vibe_writing.fetch_gemini:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_writing"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
